deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-predict-deployment
  namespace: predict-service-ns
  labels:
    app: fastapi-predict
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapi-predict
  template:
    metadata:
      labels:
        app: fastapi-predict
    spec:
      serviceAccountName: predict-service-sa
      imagePullSecrets:
        - name: gitlab-registry-credentials
      containers:
        - name: predict-container
          image: 172.21.0.6:5050/root/taska1/predict_service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "300m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
