deploy/shadow-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-predict-shadow
  namespace: predict-service-ns
  labels:
    app: fastapi-predict-shadow
    role: shadow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-predict-shadow
  template:
    metadata:
      labels:
        app: fastapi-predict-shadow
    spec:
      containers:
      - name: predict-container
        image: 172.21.0.6:5050/root/taska1/predict_service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
