deploy/service-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-predict-service
  namespace: predict-service-ns
  labels:
    app: fastapi-predict
spec:
  selector:
    app: fastapi-predict
  ports:
    - name: http-metrics
      protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-predict-ingress
  namespace: predict-service-ns
spec:
  # Современный стандарт класса Ingress
  ingressClassName: nginx
  rules:
    - host: predict.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fastapi-predict-service
                port:
                  number: 8000
