deploy/shadow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-predict-shadow-service
  namespace: predict-service-ns
  labels:
    app: fastapi-predict-shadow
spec:
  selector:
    app: fastapi-predict-shadow
  ports:
    - name: http-metrics
      protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-predict-shadow-ingress
  namespace: predict-service-ns
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: shadow.predict.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: fastapi-predict-shadow-service
              port:
                number: 8000
        - path: /predict
          pathType: Exact
          backend:
            service:
              name: fastapi-predict-shadow-service
              port:
                number: 8000
        - path: /internal/drift-report
          pathType: ImplementationSpecific
          backend:
            service:
              name: fastapi-predict-shadow-service
              port:
                number: 8000
